feat(worker): add new grpc-based worker implementation
Changes:
* Add new service Controller exposing gRPC services
* Remove WorkerTriggerResultQueue