@@ -1,6 +1,5 @@
 package io.kestra.cli.commands.servers;
 
-import com.google.common.collect.ImmutableMap;
 import io.kestra.core.contexts.KestraContext;
 import io.kestra.core.models.ServerType;
 import io.kestra.core.runners.Worker;
@@ -11,7 +10,6 @@ import picocli.CommandLine;
 import picocli.CommandLine.Option;
 
 import java.util.Map;
-import java.util.UUID;
 
 @CommandLine.Command(
     name = "worker",
@@ -23,16 +21,14 @@ public class WorkerCommand extends AbstractServerCommand {
     private ApplicationContext applicationContext;
 
     @Option(names = {"-t", "--thread"}, description = "The max number of worker threads, defaults to eight times the number of available processors")
-    private int thread = defaultWorkerThread();
+    private int thread = Worker.defaultNumThreads();
 
     @Option(names = {"-g", "--worker-group"}, description = "The worker group key, must match the regex [a-zA-Z0-9_-]+ (EE only)")
     private String workerGroupKey = null;
 
     @SuppressWarnings("unused")
     public static Map<String, Object> propertiesOverrides() {
-        return ImmutableMap.of(
-            "kestra.server-type", ServerType.WORKER
-        );
+        return Map.of("kestra.server-type", ServerType.WORKER);
     }
 
     @Override
@@ -46,12 +42,8 @@ public class WorkerCommand extends AbstractServerCommand {
             throw new IllegalArgumentException("The --worker-group option must match the [a-zA-Z0-9_-]+ pattern");
         }
 
-        // FIXME: For backward-compatibility with Kestra 0.15.x and earliest we still used UUID for Worker ID instead of IdUtils
-        String workerID = UUID.randomUUID().toString();
-        Worker worker = applicationContext.createBean(Worker.class, workerID, this.thread, this.workerGroupKey);
-        applicationContext.registerSingleton(worker);
-
-        worker.run();
+        Worker worker = applicationContext.getBean(Worker.class);
+        worker.start(this.thread, this.workerGroupKey);
 
         Await.until(() -> !this.applicationContext.isRunning());
 
